Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 14.0.0
-
None
-
-
73191bce0 (14.0)
Description
Test steps:
1. Create a new project
2. Select one file from the project tree and try to rename only the case: e.g. rename main.cpp to main.CPP
Result:
Renaming is not done. Same test works OK in Ubuntu.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-13981 [REG 3.3 -> 3.4] Renaming file doesn't work correctly when changing case only
-
- Closed
-
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTCREATORBUG-30846 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
566577,2 | Utils: Allow FilePaths to be compared case-sensitively | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |