Utils: Allow FilePaths to be compared case-sensitively

... and make use of that when renaming.

Fixes: QTCREATORBUG-30846
Change-Id: Id06a6df5db13325d17dcd69270604e754d7dee2a
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>